--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,10 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: postgres
+  password: 12345678
+  host: localhost
+  port: 5432
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
@@ -83,5 +87,5 @@ production:
   <<: *default
   database: helpdesk_production
   username: postgres
-  password: malocasoft
+  password: 12345678
   host: localhost
